# stylustx

./: .env.example  .gitignore  LICENSE  README.md
contracts/paymaster/: Cargo.toml  abi.json
contracts/paymaster/.cargo/: config.toml
contracts/paymaster/src/: lib.rs
demo/: .env.example  index.html  package.json
demo/src/: App.css  App.tsx
demo/src/components/: GaslessTxForm.tsx  StatusDisplay.tsx  WalletConnect.tsx
demo/src/hooks/: useWallet.ts
docs/: IMPLEMENTATION_PLAN.md
scripts/: deploy-paymaster.sh  initialize-paymaster.sh
sdk/: README.md  package.json
sdk/src/: client.ts  constants.ts  index.ts  types.ts
sdk/src/utils/: hashing.ts
